# NewsTrader

./: CLAUDE.md  README.md  newstrader.toml  pyproject.toml
docs/: tradingview_integration.md
src/newstrader/: __init__.py  audit.py  config.py  dedup.py  demo.py  executor.py  ingestion.py  llm_policy.py  models.py  pipeline.py  risk.py  service.py  signal.py
tests/: test_llm_policy.py  test_pipeline.py  test_pipeline_integration.py  test_signal_risk_unit.py
tradingview/: newstrader_xauusd_indicator.pine
