[project]
name = "newstrader"
version = "0.1.0"
description = "Event-driven headline-to-MT5 trading MVP skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
newstrader-demo = "newstrader.demo:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
